--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -15,12 +15,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_fragment_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0" />
-
-    <com.simplelib.views.IconButtonView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@android:drawable/ic_delete" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
