--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/main_fragment_search"
+        android:preferencesId="@+preferencesId/main_fragment_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -13,7 +13,7 @@
         android:inputType="textPersonName" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/main_fragment_recyclerView"
+        android:preferencesId="@+preferencesId/main_fragment_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
