--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/main_item_text"
+                android:preferencesId="@+preferencesId/main_item_text"
                 android:textSize="15sp"/>
 
         </LinearLayout>
