--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -2,37 +2,28 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:theme="@style/AppThemeLight">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+    <com.simplelib.views.BubbleCardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_margin="10dp"
+        android:background="?selectableItemBackground"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        card_view:bcv_arrowTarget="@+id/main_fragment_search">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/main_item_text"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:background="?selectableItemBackground"
-            android:padding="10dp"
-            android:gravity="center_vertical">
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="15sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/main_item_text"
-                android:textSize="15sp"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+    </com.simplelib.views.BubbleCardView>
 
 </LinearLayout>
