--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -10,17 +10,20 @@
     <com.simplelib.views.BubbleCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:background="?selectableItemBackground"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        card_view:bcv_arrowTarget="@+id/main_fragment_search">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/main_item_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="15sp" />
 
