--- a/simplelib/src/main/res/layout/simple_tree_item.xml
+++ b/simplelib/src/main/res/layout/simple_tree_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/tree_item_height"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingStart="@dimen/tree_item_side_padding"
     android:paddingLeft="@dimen/tree_item_side_padding"
